fixed tooltip overflow on page

--- a/css/source/premise-field.css
+++ b/css/source/premise-field.css
@@ -155,49 +155,73 @@
  * Add an icon next to the label element that explains the field
  * to the user.
  */
-.premise-field span.premise-tooltip {
-	position:relative;
-	display:inline-block;
+.premise-field .premise-tooltip {
+	position: relative;
+	display: inline-block;
 	vertical-align: top;
-	line-height:150%;
-	color:#fff;
-	margin-left:0px;
+	line-height: 1.2em;
+	color: #fff;
+	margin: -2.5px 0 0 2.5px;
 	cursor: help;
 }
 
 .premise-field .premise-tooltip:before{
-	color:#27b4b4;
+	color: #888;
 	font-family: 'FontAwesome';
 	content: "\f05a";
 }
 
-.premise-field span.premise-tooltip > i {
+.premise-field .premise-tooltip > .premise-tooltip-inner {
+	position: absolute;
+	z-index: 99;
+	left: -160px;
+	margin: 20px;
 	visibility:hidden;
-	opacity:0;
-	position:absolute;
-	bottom:150%;
-	left:-20px;
-	width:200px;
-	z-index:999999;
-	background:#444;
-	display:inline-block;
-	padding:10px;
-	border-radius:10px;
-	-webkit-border-radius:10px;
-	-moz-border-radius:10px;
-	-ms-border-radius:10px;
-	-o-border-radius:10px;
-	transition: all .3s ease-in-out;
+	opacity: 0;
+	width: 300px;
+	background: #444;
+	display: inline-block;
+	padding: 10px;
+	border-radius: 10px;
+	transition: opacity .3s ease-in-out;
 	font-size: 1em;
 	line-height: 1.3em;
 	text-transform: none;
 }
 
-.premise-admin .premise-field span.premise-tooltip > i {
+.premise-field .premise-tooltip > .premise-tooltip-inner.premise-tooltip-top {
+	top:100%;
+}
+
+.premise-field .premise-tooltip > .premise-tooltip-inner.premise-tooltip-bottom {
+	bottom:100%;
+}
+
+.premise-field .premise-tooltip > .premise-tooltip-inner.premise-tooltip-top:after {
+	bottom: 100%;
+	border-color: transparent transparent #444 transparent;
+}
+.premise-field .premise-tooltip > .premise-tooltip-inner.premise-tooltip-bottom:after {
+	top: 100%;
+	border-color: #444 transparent transparent transparent;
+}
+
+.premise-field .premise-tooltip > .premise-tooltip-inner:after {
+	content: '';
+	position: absolute;
+	left: 50%;
+	margin-left: -20px;
+	border-width: 15px 15px 15px 15px;
+	border-style: solid;
+	display: block;
+	z-index: 9;
+}
+
+.premise-admin .premise-field .premise-tooltip > .premise-tooltip-inner {
 	font-size: 0.65em;
 }
 
-.premise-field span.premise-tooltip:hover > i {
+.premise-field .premise-tooltip:hover > .premise-tooltip-inner {
 	visibility:visible;
 	opacity:1;
 }
@@ -364,7 +388,7 @@
     border-width: 0 19px 19px 19px;
     border-color: transparent transparent #fff transparent;
     border-style: solid;
-    z-index: 6;
+    z-index: 2;
 }
 
 .premise-field > .premise-field-fa-icons-container .premise-field-fa-icons-container-inner {
